Revision history for Pandoc-Elements

{{$NEXT}}

0.07  2015-09-22 15:39:49 CEST
    - extend documentation and examples

0.06  2015-01-19 12:58:09 CET
    - fix endless recursion bug (issue #7)
    - add walker methods to documente elements (issue #4)
    - simplify access to attributes (issue #8, not documented yet)
    - rename and document function pandoc_json
    - extend documentation

0.05  2014-12-27 15:45:38 CET
    - fixed filter bug (issue #5)
    - added examples
    - added more accessor methods
    - remove method value

0.04  2014-10-27 14:09:21 CET
    - added accessor methods (issue #1)
    - refactoring

0.03  2014-10-26 20:52:58 CET
    - use blessed objects
    - new methods to_json and from_json
    - added Pandoc::Filter
    - changed calling syntax of Pandoc::Walker

0.02  2014-10-26 10:34:37 CET
    - added Pandoc::Walker
    - new helper method: element

0.01  2014-10-23 21:34:25 CEST
    - initial release