@@ -1,4 +1,4 @@
-requires 'perl', '5.008005';
+requires 'perl', '5.010';
 requires 'JSON';
 
 on test => sub {
