@@ -1,6 +1,7 @@
 Revision history for Pandoc-Elements
 
 {{$NEXT}}
+    - new helper function: citation
 
 0.07  2015-09-22 15:39:49 CEST
     - extend documentation and examples
